3740: fix wrap styling

--- a/helium/src/scss/_sales_page.scss
+++ b/helium/src/scss/_sales_page.scss
@@ -110,7 +110,7 @@
       padding: 80px 0 (80px - 24px) 0;
     }
 
-    .wrap {
+    &> .wrap {
       @include respond_to(tablet_landscape) {
         width: $MAX_CONTENT_WIDTH;
         margin: 0 auto;
